applications/ingress/manifests/chamber.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: chamber-headers
  namespace: ingress
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Host: "chamber.immaleix.casa"
      X-Forwarded-Port: "443"
    customResponseHeaders:
      Access-Control-Allow-Origin: "https://chamber.immaleix.casa"
      Access-Control-Allow-Credentials: "true"
---
apiVersion: v1
kind: Service
metadata:
  name: chamber
  namespace: ingress
spec:
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: chamber
  namespace: ingress
subsets:
  - addresses:
      - ip: 192.168.1.27
    ports:
      - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chamber
  namespace: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
    traefik.ingress.kubernetes.io/router.middlewares: ingress-chamber-headers@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: chamber
    gethomepage.dev/icon: chamber
spec:
  ingressClassName: traefik
  rules:
    - host: chamber.immaleix.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chamber
                port:
                  number: 80
  tls:
    - hosts:
        - chamber.immaleix.casa
      secretName: chamber-tls
